--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <span>20 January, 2020</span>
                 <h2>ASUS ROG STRIX SCAR 15 GAMING LAPTOP</h2>
                 <p>The Asus ROG Strix Scar 15has been made to be one of the flashiest gaming laptops out there. The laptop features a black matte finish with the ROG logo in RGB on the back panel of the display. The keyboard features an RGB backlight and what is even more exciting is the band of RGB light that is placed...</p>
-                <a href = "https://dachrotech.blogspot.com/2021/03/asus-rog-strix-scar-15-gaming-laptop.html#more">Read More</a>
+                <a href = "asusrog.html">Read More</a>
               </div>
             </div>
             <!-- end of item -->
