--- a/asusrog.html
+++ b/asusrog.html
@@ -58,7 +58,8 @@
         <div class = "container">
           <div class = "about-content">
             <div>
-              <img src = "https://rog.asus.com/websites/global/Products/cc3h9k37agqbojxf/v1/images/large/1x/kv.jpg" alt = "">
+              <img src = "https://rog.asus.com/websites/global/Products/cc3h9k37agqbojxf/v1/images/large/1x/kv.jpg" alt = "image">
+              <img src = "https://sm.mashable.com/t/mashable_in/photo/default/asus-rog-strix-scar-g15-review_8wpm.960.jpg" alt = "image">
             </div>
             <div class = "about-text">
               <div class = "title">
