--- a/index.html
+++ b/index.html
@@ -242,11 +242,11 @@
         <div class = "container">
           <div class = "about-content">
             <div>
-              <img src = "images/about-bg.jpg" alt = "">
+              <img src = "https://scontent.fshl1-1.fna.fbcdn.net/v/t1.0-9/155764216_1052201285300880_358844301563032218_o.jpg?_nc_cat=111&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=LJynnYGHv64AX_-gtsa&_nc_ht=scontent.fshl1-1.fna&oh=5f453ef9cdc88e488769461f03e240ce&oe=606D7B0F" alt = "">
             </div>
             <div class = "about-text">
               <div class = "title">
-                <h2>Dachro Manifestation</h2>
+                <h2>Dachro Technology</h2>
                 <p>We provide best products to manifest yourself</p>
               </div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id totam voluptatem saepe eius ipsum nam provident sapiente, natus et vel eligendi laboriosam odit eos temporibus impedit veritatis ut, illo deserunt illum voluptate quis beatae quod. Necessitatibus provident dicta consectetur labore!</p>
