--- a/aboutus.html
+++ b/aboutus.html
@@ -11,7 +11,7 @@
 
 
 
-    <title>Dachro Manifestation About us</title>
+    <title>Dachro Technology About us</title>
   </head>
   <body>
     <div class="container">
@@ -19,7 +19,7 @@
     <header>
       <nav class = "navbar">
         <div class = "container">
-          <a href = "index.html" class = "navbar-brand">Dachro Manifestation</a>
+          <a href = "index.html" class = "navbar-brand">Dachro Technology</a>
           <div class = "navbar-nav">
             <a href = "index.html">home</a>
             <a href = "aboutus.html">About</a>
@@ -30,7 +30,7 @@
       <div class = "banner">
         <div class = "container">
           <h1 class = "banner-title">
-            <span>Mind & Health</span> Manifestation Blog
+            <span>Mind & Health</span> Technology Blog
           </h1>
           <p>everything that you want to know about how to be fit mentally & physically</p>
         </div>
