--- a/asusrog.html
+++ b/asusrog.html
@@ -95,6 +95,7 @@ The Asus ROG Strix Scar 15 comes with a 66WHrs, 4S1P, 4-cell Li-ion battery whic
 The battery lasts around an hour when playing games on it which is not impressive at all. But considering that it runs an RTX 2070 on that battery, I suppose it is fitting. The battery charges up in about 45 minutes and lasts about two and a half hours when in the Silent Mode and two hours in the Performance mode.
 
 </p>
+            <a href = "https://amzn.to/3qGpLG7">Visit Product</a>
             </div>
           </div>
         </div>
