--- a/asusrog.html
+++ b/asusrog.html
@@ -110,7 +110,7 @@ The battery lasts around an hour when playing games on it which is not impressiv
           <a href = "#"><i class = "fab fa-linkdin"><div><img src="https://pngimg.com/uploads/linkedIn/linkedIn_PNG38.png" alt=""></div></i></a>
           <a href = "#"><i class = "fab fa-pinterest"><div><img src="https://i.pinimg.com/originals/d3/d1/75/d3d175e560ae133f1ed5cd4ec173751a.png" alt=""></div></i></a>
         </div>
-        <span>Dachro Manifestation blog page</span>
+        <span>Dachro Technology blog page</span>
       </footer>
 
 
