--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@
             <!-- item -->
             <div class = "blog-item">
               <div class = "blog-img">
-                <img src = "images/blog-p-5.jpg" alt = "">
+                <img src = "https://images.unsplash.com/photo-1601158935942-52255782d322?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8dGVzbGF8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt = "image">
                 <span><i class = "far fa-heart"></i></span>
               </div>
               <div class = "blog-text">
                 <span>20 January, 2020</span>
-                <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
-                <a href = "#">Read More</a>
+                <h2>Tesla</h2>
+                <p>Tesla, Inc. is an American electric vehicle and clean energy company based in Palo Alto, California. Tesla's current products include electric cars, battery energy storage from home to grid scale, solar panels and solar roof tiles, as well as other related products and services. Tesla is ranked as the world's best-selling plug-in and battery electric passenger car manufacturer, with a market share of...</p>
+                <a href = "tesla.html">Read More</a>
               </div>
             </div>
             <!-- end of item -->
