--- a/tesla.html
+++ b/tesla.html
@@ -87,7 +87,7 @@ In its relatively short history, Tesla has experienced many moments of triumph a
 
 
               <h5>History of Tesla</h5>
-<pThough the famous South African entrepreneur Elon Musk is now inseparable from the name “Tesla”, Musk wasn’t actually the one to first found the company.
+<p> Though the famous South African entrepreneur Elon Musk is now inseparable from the name “Tesla”, Musk wasn’t actually the one to first found the company.
 
 Before Elon Musk became involved, Tesla was incorporated in July of 2003 by Martin Eberhard and Marc Tarpenning. The two men were inspired to start the company after GM recalled it EV1 electric cars, confident that they would be able to oversee the production of a functioning electric vehicle that would succeed where the EV1 had failed.
 
