--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <!-- item -->
             <div class = "blog-item">
               <div class = "blog-img">
-                <img src = "https://images.unsplash.com/photo-1601158935942-52255782d322?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8dGVzbGF8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt = "image">
+                <img src = "https://images.unsplash.com/photo-1612810806695-30f7a8258391?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDR8fHRlc2xhfGVufDB8fDB8&auto=format&fit=crop&w=500&q=60" alt = "image">
                 <span><i class = "far fa-heart"></i></span>
               </div>
               <div class = "blog-text">
