--- a/asusrog.html
+++ b/asusrog.html
@@ -76,26 +76,26 @@ The other attractive part of the design of the Asus ROG Strix Scar 15 is the hin
 
 The laptop has vents on the right as well as the back, these spew out hot air when the laptop is tasked with a heavy load. The rear panel of the device features the power, a USB 3.2 Gen2 Type-C, HDMI 2.0b and LAN RJ45 port. While the right-hand side panel just has space for the keystone and the left-hand side features a 3.5mm audio port, and three USB 3.2 Gen 1 Type-A ports. The bottom of the laptop has slits that let the air in to cool the insides of the laptop.</p>
 
-              <h4>Display</h4>
+              <h3>Features</h3>
 <p>We are now going to talk about one of the features of the Asus ROG Strix Scar 15 which I absolutely loved, and that is its display. The laptop comes with a 15.6-inch Full HD 300Hz 3ms display. This means that the display is capable of showing 1920 x 1080 pixels at 300fps which is ideal for gaming at the moment. The colour reproduction of the display is accurate and it uses … technology.
 
 While the display of Asus ROG Strix Scar 15 reproduces colour accurately, it may not be fancy enough for media producers, but it sure works great for gaming. The 300 fps display with a latency of 3ms is usually more than the laptop can play most games at. While playing RPGs and other non-competitive games on this display is a treat, it really makes a difference when playing competitive multiplayer games. I played Counter-Strike Global Offensive, Rainbow Six Siege, Valorant and Dota 2 on this and the display performed impeccably. My response time significantly rose as a result of the higher refresh rate, giving me an edge over others.</p>
 
 
-              <h5>Gaming</h5>
+              <h3>Gaming</h3>
 <p>The Asus ROG Strix Scar 15 has top-notch performance when it comes to gaming, which goes without saying. I played AAA RPG games along with multiplayer competitive ones and the laptop chewed them up and spit them out like it was nothing. We played Sekiro: Shadows Die Twice, DOOM Eternal, Horizon Zero Dawn, Crysis Remastered and other games on the laptop in their highest setting. The laptop could keep up fps between 35-40 when playing Crysis Remastered in the “Can it run Crysis” settings which have become notorious as soon as the game launched. Other games like DOOM Eternal saw steady frames at around 120, Sekiro at 130, Horizon Zero Dawn at 90 (before the fixes were issued by the developer).
 
 Now coming to the multiplayer games, the ROG Strix Scar 15 could handle Counter Strike Global Offensive at 350 fps, Rainbow Six Siege at 200, Valorant at 350 and Dota 2 at 300. These games are really where the display shined and performed at its best. In terms of benchmarking the laptop scored 7204 on the 3D Mark 10 TimeSpy test which is much higher than a regular gaming laptop but lower than a gaming PC. In terms of the CPU temperatures, it reached 90-degree Centigrade when pushed in the Boost mode, otherwise, it sticks to around 84 degrees.
 
 These scores were all recorded when the CPU and the GPU were being pushed to the limit with the Boost mode of the laptop which made the most noise. There’s also the Performance and the Silent modes where the performance of the games vary.</p>
 
-              <h6>Battery and audio</h6>
+              <h3>Battery and audio</h3>
 The Asus ROG Strix Scar 15 comes with a 66WHrs, 4S1P, 4-cell Li-ion battery which is charged by a massive power brick. And the power cable provided with it requires at least a large 5-ampere socket for the plugin. The power brick is rather heavy and so is the laptop at 2.57 kg making it not the most portable.
 
 The battery lasts around an hour when playing games on it which is not impressive at all. But considering that it runs an RTX 2070 on that battery, I suppose it is fitting. The battery charges up in about 45 minutes and lasts about two and a half hours when in the Silent Mode and two hours in the Performance mode.
 
 </p>
-            <a href = "https://amzn.to/3qGpLG7">Visit Product</a>
+            <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=sobemayastore-21&language=en_IN&marketplace=amazon&region=IN&placement=B08HX42DGG&asins=B08HX42DGG&linkId=a35c7bb39035da7cb8c64b54b2fb6ea6&show_border=true&link_opens_in_new_window=true"></iframe>
             </div>
           </div>
         </div>
