--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <h1 class = "banner-title">
             <span>Modern</span> Technology Blog
           </h1>
-          <p>everything that you want to know about the modern Technology & Tech Products</p>
+          <p>Everything that you want to know about the modern Technology & Tech Gadgets</p>
         </div>
       </div>
     </header>
@@ -44,7 +44,7 @@
           <p>In modern life, we are surrounded by technology. It's integral to everything we do, big or small. We can find examples of technology in our homes and personal spaces, in industry, in business, and in the medical profession. Most people know technology when they see it, but what exactly is technology?
 
             Technology is the way we apply scientific knowledge for practical purposes. It includes machines (like computers) but also techniques and processes (like the way we produce computer chips). It might seem like all technology is only electronic, but that's just most modern technology. In fact, a hammer and the wheel are two examples of early human technology.</p>
-          <a class="btn btn-outline-light btn-lg mt-4" href="https://dachrotech.blogspot.com/" role="button">learn more</a>
+          <a class="btn btn-outline-light btn-lg mt-4" href="https://www.facebook.com/Dachro-Tech-informations-gadgets-104333231707364" role="button">Visit Facebook Page for more</a>
           </div>
 
           <!-- design -->
@@ -65,12 +65,12 @@
             <!-- item -->
             <div class = "design-item">
               <div class = "design-img">
-                <img src = "https://images.unsplash.com/photo-1606564268171-e652d1d7fffd?ixid=MXwxMjA3fDB8MHxzZWFyY2h8M3x8Z29vZ2xlJTIwYXNzaXN0YW50fGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt = "image">
+                <img src = "images/A.I.png" alt = "image">
                 <span><i class = "far fa-heart"></i> 1</span>
                 <span>A.I</span>
               </div>
               <div class = "design-title">
-                <a href = "https://amzn.to/3ruDxg0">Artificial intelligence (AI) refers to the simulation of human intelligence in machines that are programmed to think like humans and mimic their actions. The term may also be applied to any machine that exhibits traits associated with a human mind such as learning and problem-solving.</a>
+                <a href = "https://amzn.to/3ruDxg0">Artificial intelligence (A.I.) refers to the simulation of human intelligence in machines that are programmed to think like humans and mimic their actions. The term may also be applied to any machine that exhibits traits associated with a human mind such as learning and problem-solving.</a>
               </div>
             </div>
             <!-- end of item -->
