--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!-- item -->
             <div class = "design-item">
               <div class = "design-img">
-                <img src = "images/A.I.png" alt = "image">
+                <img src = "images/A.I (1).png" alt = "image">
                 <span><i class = "far fa-heart"></i> 1</span>
                 <span>A.I</span>
               </div>
@@ -77,7 +77,7 @@
             <!-- item -->
             <div class = "design-item">
               <div class = "design-img">
-                <img src = "https://images.unsplash.com/photo-1514380174678-ac7d0a175926?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MjN8fGVsZWN0cmljaXR5fGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt = "image">
+                <img src = "images/electricity.png" alt = "electricity">
                 <span><i class = "far fa-heart"></i> 2</span>
                 <span>Electricity</span>
               </div>
@@ -89,7 +89,7 @@
             <!-- item -->
             <div class = "design-item">
               <div class = "design-img">
-                <img src = "https://images.unsplash.com/photo-1531934788018-04c3cd417b80?ixid=MXwxMjA3fDB8MHxzZWFyY2h8N3x8bWFjYm9va3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt = "">
+                <img src = "images/COMMUNICATION.png" alt = "Communication">
                 <span><i class = "far fa-heart"></i> 3</span>
                 <span>Communication</span>
               </div>
@@ -101,7 +101,7 @@
             <!-- item -->
             <div class = "design-item">
               <div class = "design-img">
-                <img src = "https://images.unsplash.com/photo-1505506874110-6a7a69069a08?ixid=MXwxMjA3fDB8MHxzZWFyY2h8M3x8c3BhY2V8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt = "">
+                <img src = "images/Space.png" alt = "Space">
                 <span><i class = "far fa-heart"></i> 4</span>
                 <span>Space</span>
               </div>
@@ -113,7 +113,7 @@
             <!-- item -->
             <div class = "design-item">
               <div class = "design-img">
-                <img src = "https://images.unsplash.com/photo-1523920716885-8a681115294f?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mjh8fGdyZWVuJTIwaG91c2V8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt = "">
+                <img src = "images/food technology.png" alt = "food technology">
                 <span><i class = "far fa-heart"></i> 5</span>
                 <span>Food Technology</span>
               </div>
@@ -125,12 +125,12 @@
             <!-- item -->
             <div class = "design-item">
               <div class = "design-img">
-                <img src = "https://images.unsplash.com/photo-1485368510545-b1f4bcd02d0d?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Nnx8YXRvbXxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt = "">
+                <img src = "images/quantum.png" alt = "Quantum Technology">
                 <span><i class = "far fa-heart"></i> 6</span>
-                <span>Quantam Technology</span>
+                <span>Quantum Technology</span>
               </div>
               <div class = "design-title">
-                <a href = "https://amzn.to/30qVdgJ">If successfully developed, quantum computers are predicted to be able to perform certain algorithms significantly faster than even the largest classical computer available today. Quantum computers are expected to have a number of important uses in computing fields such as optimization and machine learning.</a>
+                <a href = "https://amzn.to/30qVdgJ">Quantum technology is a class of technology that works by using the principles of quantum mechanics (the physics of sub-atomic particles), including quantum entanglement and quantum superposition.</a>
               </div>
             </div>
             <!-- end of item -->
@@ -247,10 +247,11 @@
             <div class = "about-text">
               <div class = "title">
                 <h2>Dachro Technology</h2>
-                <p>We provide best products to manifest yourself</p>
+                <p>We provide best informations about modern technology & tech gadgets</p>
               </div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id totam voluptatem saepe eius ipsum nam provident sapiente, natus et vel eligendi laboriosam odit eos temporibus impedit veritatis ut, illo deserunt illum voluptate quis beatae quod. Necessitatibus provident dicta consectetur labore!</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam corrupti natus, eos quia recusandae voluptatem veniam modi officiis minima provident rem sint porro fuga quos tempora ea suscipit vero velit sed laudantium eaque necessitatibus maxime!</p>
+              <p> Hi! I'm Rishi Chakraborty, I'm a member of our Dachro Group, I'm here to provide you with the latest tech news & tech gadgets so that you can stay updated about the tech world because nowadays technology is the brain of society, we are using technology each & every time intentionally or unintentionally, so, it's important to make aware of new technologies of our world./p>
+              <h3>Why us? Why you'll follow our website?</h3>
+              <p>Because we always try to make satisfied our website visitors.</p>
             </div>
           </div>
         </div>
@@ -260,12 +261,12 @@
       <!-- footer -->
       <footer>
         <div class = "social-links">
-          <a href = "https://www.facebook.com/Dachro-Health-Mind-114226894041562"><i class = "fab fa-facebook-f"><div><img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Facebook_Logo.png" alt=""></div></i></a>
-          <a href = "#"><i class = "fab fa-instagram"><div><img src="https://i.pinimg.com/originals/8a/77/05/8a770507298d728a1e3e039a0507dd8e.png" alt=""></div></i></a>
+          <a href = "https://www.facebook.com/Dachro-Tech-informations-gadgets-104333231707364"><i class = "fab fa-facebook-f"><div><img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Facebook_Logo.png" alt=""></div></i></a>
+          <a href = "https://instagram.com/dachro_tech_informations?igshid=btoevlwg2hhx"><i class = "fab fa-instagram"><div><img src="https://i.pinimg.com/originals/8a/77/05/8a770507298d728a1e3e039a0507dd8e.png" alt=""></div></i></a>
           <a href = "#"><i class = "fab fa-linkdin"><div><img src="https://pngimg.com/uploads/linkedIn/linkedIn_PNG38.png" alt=""></div></i></a>
           <a href = "#"><i class = "fab fa-pinterest"><div><img src="https://i.pinimg.com/originals/d3/d1/75/d3d175e560ae133f1ed5cd4ec173751a.png" alt=""></div></i></a>
         </div>
-        <span>Dachro Manifestation blog page</span>
+        <span>Dachro Technology blog page</span>
       </footer>
 
 
