--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 <h2>Dachro Technology</h2>
                 <p>We provide best informations about modern technology & tech gadgets</p>
               </div>
-              <p> Hi! I'm Rishi Chakraborty, I'm a member of our Dachro Group, I'm here to provide you with the latest tech news & tech gadgets so that you can stay updated about the tech world because nowadays technology is the brain of society, we are using technology each & every time intentionally or unintentionally, so, it's important to make aware of new technologies of our world./p>
+              <p> Hi! I'm Rishi Chakraborty, I'm a member of our Dachro Group, I'm here to provide you with the latest tech news & tech gadgets so that you can stay updated about the tech world because nowadays technology is the brain of society, we are using technology each & every time intentionally or unintentionally, so, it's important to make aware of new technologies of our world.</p>
               <h3>Why us? Why you'll follow our website?</h3>
               <p>Because we always try to make satisfied our website visitors.</p>
             </div>
