--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <div class = "container">
           <div class = "about-content">
             <div>
-              <img src = "https://scontent.fshl1-1.fna.fbcdn.net/v/t1.0-9/155764216_1052201285300880_358844301563032218_o.jpg?_nc_cat=111&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=LJynnYGHv64AX_-gtsa&_nc_ht=scontent.fshl1-1.fna&oh=5f453ef9cdc88e488769461f03e240ce&oe=606D7B0F" alt = "">
+              <img src = "https://scontent.fgau1-1.fna.fbcdn.net/v/t1.6435-9/132013025_1512939975762645_2185989858423456809_n.jpg?_nc_cat=101&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=qXUejvivSvQAX9CUm4P&_nc_ht=scontent.fgau1-1.fna&oh=e11d9e5f9d9624bf9685c3a5591da786&oe=6089009B" alt = "">
             </div>
             <div class = "about-text">
               <div class = "title">
